[gd_scene load_steps=4 format=2]

[ext_resource path="res://player/player_fase3/side_scroller_F3/gun_bullet_F3_SD/gun_bullet_F3_SD.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.29145
height = 14.7262

[node name="gun_bullet_F3_SD" type="Area2D" groups=[
"projetil_player",
]]
collision_layer = 2
collision_mask = 2
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="." groups=[
"projetil_player",
]]
rotation = 1.5708
shape = SubResource( 1 )

[node name="sprite_orb" type="Sprite" parent="."]
position = Vector2( 0.0970478, -0.390366 )
scale = Vector2( 0.254595, 0.0613998 )
texture = ExtResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( -0.547722, -0.0548844 )
scale = Vector2( 0.413096, 0.319865 )
[connection signal="area_entered" from="." to="." method="_on_orb__de_fogo_SD_area_entered"]
[connection signal="area_shape_entered" from="." to="." method="_on_gun_bullet_F3_SD_area_shape_entered"]
[connection signal="body_shape_entered" from="." to="." method="_on_gun_bullet_F3_SD_body_shape_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
